Sample fixes for site collapsing on reload and date picker not showing in server mode. Unit test extended to cover multiple parsers addition.

--- a/src/ExpressiveAnnotations.MvcWebSample/Content/Site.css
+++ b/src/ExpressiveAnnotations.MvcWebSample/Content/Site.css
@@ -94,8 +94,9 @@ a {
 .content-wrapper {
     margin: 0 auto;
     max-width: 1100px;
+    min-height: 750px; /* hack that prevents site from collapsing on reload (probably the reason is some floated elements do not add to the height in the container element) */
 }
-
+                        
 fieldset {
     margin: 0;
 }
